light/dark mode fix for mobile and unnecessary code deletions

--- a/src/css/Sponsor.module.css
+++ b/src/css/Sponsor.module.css
@@ -13,9 +13,6 @@
   }
 }
 
-.img {
-}
-
 .name {
   color: var(--color-text-body);
   font: var(--font-body);
